Fix Midjourney link icon

--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2482,18 +2482,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1731975444#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1732034286#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1731975444#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1732034286#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1731975444#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1732034286#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1731975444#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1732034286#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5583,7 +5583,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1731975444#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1732034286#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -5764,7 +5764,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1731975444#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1732034286#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6212,7 +6212,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1731975444#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1732034286#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7164,7 +7164,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1731975444#question');
+    background-image: url('/static/img/icon/icons.svg?v=1732034286#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7374,7 +7374,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
     content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-    background-image: url('/static/img/icon/icons.svg?v=1731975444#magnifying-glass-plus-light');
+    background-image: url('/static/img/icon/icons.svg?v=1732034286#magnifying-glass-plus-light');
     background-size: 56px 56px;
     background-origin: content-box;
     background-repeat: no-repeat;
@@ -7763,7 +7763,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1731975444#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1732034286#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7842,7 +7842,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody div.block-context-highlighted .block-context-highlight-here::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1731975444#manicule-right');
+    background-image: url('/static/img/icon/icons.svg?v=1732034286#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
@@ -8859,6 +8859,13 @@ a[data-link-icon='metaculus'] .link-icon-hook::after {
 }
 a[data-link-icon='metaculus']:hover .link-icon-hook::after {
     opacity: 0.45;
+}
+
+a[data-link-icon='midjourney'] .link-icon-hook::after {
+    --link-icon-size: 0.9em;
+    --link-icon-offset-x: 0.1em;
+
+    opacity: 0.65;
 }
 
 a[data-link-icon='miri'] .link-icon-hook::after {
