--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -8861,6 +8861,13 @@ a[data-link-icon='metaculus']:hover .link-icon-hook::after {
     opacity: 0.45;
 }
 
+a[data-link-icon='midjourney'] .link-icon-hook::after {
+    --link-icon-size: 0.9em;
+    --link-icon-offset-x: 0.1em;
+
+    opacity: 0.65;
+}
+
 a[data-link-icon='miri'] .link-icon-hook::after {
     --link-icon-size: 1.05em;
     --link-icon-offset-x: 0.1em;
