Simply footer-logo styling and correct behavior

--- a/css/default.css
+++ b/css/default.css
@@ -3371,35 +3371,41 @@ ol.link-bibliography-list-compact > li::before {
 }
 
 #footer-decoration-container .footer-logo {
+    display: block;
+    height: 30px;
     position: relative;
+	background-image: linear-gradient(to right, 
+									  var(--GW-bottom-ornament-line-color) 50%, 
+									  var(--GW-body-background-color) 50%);
+    background-size: 2px 1px;
+    background-repeat: repeat-x;
+    background-position: 0 50%;
     opacity: 0.3;
     pointer-events: none;
 }
 #footer-decoration-container .footer-logo:hover {
     opacity: 1.0;
 }
-#footer-decoration-container .footer-logo::before {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom: 15px;
-    height: 1px;
-    border-bottom: 1px dotted var(--GW-bottom-ornament-line-color);
-    width: 100%;
-}
+#footer-decoration-container .footer-logo::before,
 #footer-decoration-container .footer-logo::after {
     content: "";
-    background-color: var(--GW-body-background-color);
-    background-image: url('/static/img/logo/logo-smooth.svg');
-    display: block;
-    position: relative;
+    position: absolute;
+    height: 100%;
     width: 22px;
-    height: 30px;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    padding: 0 10px 0 12px;
+}
+#footer-decoration-container .footer-logo::before {
+    background-color: var(--GW-body-background-color);
+}
+#footer-decoration-container .footer-logo::after {
+    background-image: url('/static/img/logo/logo-smooth.svg');
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
-    margin: auto;
-    padding: 0 10px 0 10px;
     z-index: 1;
     pointer-events: auto;
 }
