--- a/css/dark-mode-adjustments.css
+++ b/css/dark-mode-adjustments.css
@@ -1,9 +1,14 @@
 :root {
-    /*  Adjust background color to prevent pixels from turning off (contrary to popular belief, pixels turning off saves trivial energy, like <1% in measurements, and causes nasty scrolling/update jank due to delay in pixels turning back on), and improve contrast with the white.
+    /*  Adjust background color to prevent pixels from turning off (contrary to 
+    	popular belief, pixels turning off saves trivial energy, like <1% in 
+    	measurements, and causes nasty scrolling/update jank due to delay in 
+    	pixels turning back on), and improve contrast with the white.
      */
     --GW-body-background-color: #161616;
 
-    /*  Dial back from pure white to keep contrast from being *too* high & 'stark' (#fff bg / #000 text seems to work in light mode, but not in dark mode, perhaps because of differences in lighting environment?)
+    /*  Dial back from pure white to keep contrast from being *too* high & 
+    	‘stark’ (#fff bg / #000 text seems to work in light mode, but not in 
+    	dark mode, perhaps because of differences in lighting environment?)
      */
     --GW-body-text-color: #f1f1f1;
 
@@ -12,10 +17,6 @@
         it in the way we want.)
      */
     --GW-syntax-highlight-color-control-flow: #cce1c8;
-
-    /*  Variable for SVGs to use (like for the —𝔊— footers on the index page)
-     */
-    --GW-body-background-color-inverted: #e9e9e9;
 
     /*  Reader mode.
      */
@@ -94,11 +95,10 @@ figure img[src$=".svg"]:not(.invert):not(.invert-auto) {
 
     Implementation: Modifying the ‘fill’ does not work so well when we call an
     SVG as a ‘background-image’ (like for the  footers on the index page), so we
-    do variable+invert tricks to get a white copy of the logo as a hack.
+    invert to get a white copy of the logo as a hack.
  */
 #footer-decoration-container a.footer-logo::after {
     filter: invert(1);
-    background-color: var(--GW-body-background-color-inverted);
 }
 
 /*	The ornaments at the corners of the “X of the day” box must be inverted.
