--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -673,11 +673,16 @@
 	--GW-x-of-the-day-border-color: #5c5c5c;
 }
 :root {
-    /*  Adjust background color to prevent pixels from turning off (contrary to popular belief, pixels turning off saves trivial energy, like <1% in measurements, and causes nasty scrolling/update jank due to delay in pixels turning back on), and improve contrast with the white.
+    /*  Adjust background color to prevent pixels from turning off (contrary to 
+    	popular belief, pixels turning off saves trivial energy, like <1% in 
+    	measurements, and causes nasty scrolling/update jank due to delay in 
+    	pixels turning back on), and improve contrast with the white.
      */
     --GW-body-background-color: #161616;
 
-    /*  Dial back from pure white to keep contrast from being *too* high & 'stark' (#fff bg / #000 text seems to work in light mode, but not in dark mode, perhaps because of differences in lighting environment?)
+    /*  Dial back from pure white to keep contrast from being *too* high & 
+    	‘stark’ (#fff bg / #000 text seems to work in light mode, but not in 
+    	dark mode, perhaps because of differences in lighting environment?)
      */
     --GW-body-text-color: #f1f1f1;
 
@@ -686,10 +691,6 @@
         it in the way we want.)
      */
     --GW-syntax-highlight-color-control-flow: #cce1c8;
-
-    /*  Variable for SVGs to use (like for the —𝔊— footers on the index page)
-     */
-    --GW-body-background-color-inverted: #e9e9e9;
 
     /*  Reader mode.
      */
@@ -768,11 +769,10 @@ figure img[src$=".svg"]:not(.invert):not(.invert-auto) {
 
     Implementation: Modifying the ‘fill’ does not work so well when we call an
     SVG as a ‘background-image’ (like for the  footers on the index page), so we
-    do variable+invert tricks to get a white copy of the logo as a hack.
+    invert to get a white copy of the logo as a hack.
  */
 #footer-decoration-container a.footer-logo::after {
     filter: invert(1);
-    background-color: var(--GW-body-background-color-inverted);
 }
 
 /*	The ornaments at the corners of the “X of the day” box must be inverted.
@@ -977,6 +977,6 @@ a[data-link-icon-color]:hover .link-icon-hook::after {
     background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1732034286">
-<script src="/static/js/head.js?v=1732034286"></script>
-<link rel="preload" href="/static/img/icon/icons.svg?v=1732034286" as="image">
+<link rel="stylesheet" href="/static/css/head.css?v=1732047356">
+<script src="/static/js/head.js?v=1732047356"></script>
+<link rel="preload" href="/static/img/icon/icons.svg?v=1732045380" as="image">
