--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2482,18 +2482,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1731466932#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1731975755#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1731466932#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1731975755#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1731466932#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1731975755#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1731466932#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1731975755#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5583,7 +5583,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1731466932#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1731975755#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -5764,7 +5764,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1731466932#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1731975755#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6212,7 +6212,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1731466932#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1731975755#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7164,7 +7164,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1731466932#question');
+    background-image: url('/static/img/icon/icons.svg?v=1731975755#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7374,7 +7374,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
     content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-    background-image: url('/static/img/icon/icons.svg?v=1731466932#magnifying-glass-plus-light');
+    background-image: url('/static/img/icon/icons.svg?v=1731975755#magnifying-glass-plus-light');
     background-size: 56px 56px;
     background-origin: content-box;
     background-repeat: no-repeat;
@@ -7763,7 +7763,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1731466932#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1731975755#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7842,7 +7842,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody div.block-context-highlighted .block-context-highlight-here::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1731466932#manicule-right');
+    background-image: url('/static/img/icon/icons.svg?v=1731975755#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
@@ -8104,7 +8104,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
  */
 .markdownBody a.has-annotation,
 .markdownBody a.has-annotation-partial {
-	background-image: linear-gradient(to right, var(--link-underline-gradient-line-color) 50%, var(--link-underline-background-color) 50%);
+    background-image: linear-gradient(to right, var(--link-underline-gradient-line-color) 50%, var(--link-underline-background-color) 50%);
     background-size: 2px 1px;
 }
 .markdownBody a.has-annotation.decorate-not {
@@ -8165,7 +8165,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 /*=================*/
 
 a[data-link-icon][data-link-icon-color]:hover {
-	--link-underline-gradient-line-color: var(--link-icon-color-hover);
+    --link-underline-gradient-line-color: var(--link-icon-color-hover);
 }
 
 /*******************/
@@ -8188,10 +8188,10 @@ a[data-link-icon-type='svg'] .link-icon-hook::after {
     opacity: 0.55;
 }
 a[data-link-icon-type='svg']:hover .link-icon-hook::after {
-	opacity: 0.3;
+    opacity: 0.3;
 }
 a[data-link-icon-type='svg'][data-link-icon-color]:hover .link-icon-hook::after {
-	background-image: var(--link-icon-url-hover, var(--link-icon-url));
+    background-image: var(--link-icon-url-hover, var(--link-icon-url));
     opacity: 1.0;
 }
 
@@ -8224,8 +8224,8 @@ a[data-link-icon-type*='text'] .link-icon-hook::after {
 }
 
 a[data-link-icon-type*='text'][data-link-icon-color]:hover .link-icon-hook::after {
-	color: var(--link-icon-color-hover, currentColor);
-	opacity: 1.0;
+    color: var(--link-icon-color-hover, currentColor);
+    opacity: 1.0;
 }
 
 a[data-link-icon-type*='sans'] .link-icon-hook::after {
@@ -9069,9 +9069,9 @@ a[data-link-icon='stat-news'] .link-icon-hook::after {
 }
 
 a[data-link-icon='magnifying-glass'] .link-icon-hook::after { /* eye glass for Retraction Watch; cf. .icon-magnifying-glass */
-	--link-icon-size: 0.9em;
-	--link-icon-offset-y: 0.1em;
-	--link-icon-offset-x: 0.05em;
+    --link-icon-size: 0.9em;
+    --link-icon-offset-y: 0.1em;
+    --link-icon-offset-x: 0.05em;
 
     opacity: 0.75;
 }
@@ -9126,6 +9126,12 @@ a[data-link-icon='tiktok'] .link-icon-hook::after {
     --link-icon-size: 0.75em;
     --link-icon-offset-x: 0.10em;
     --link-icon-offset-y: 0.15em;
+}
+
+a[data-link-icon='midjourney'] .link-icon-hook::after {
+    --link-icon-size: 1.5em;
+    --link-icon-offset-x: -0.15em;
+    --link-icon-offset-y: -0.30em;
 }
 
 a[data-link-icon='bibliography'] .link-icon-hook::after { /* lb link-bibliography 'table of contents' */
