Fix reader-mode bugs with link decorations and refactor link decoration CSS

--- a/css/head-GENERATED.css
+++ b/css/head-GENERATED.css
@@ -2680,7 +2680,8 @@ body.page-index[class*='special-christmas'] #sidebar a.logo {
 	font-display: swap;
 	unicode-range: U+0020-007E, U+00A0-00FF, U+2010, U+2013-2014, U+2018-2019, U+201C-201D, U+2212;
 }
-/* Elements to be deleted completely. */
+/*	Elements to be deleted completely.
+ */
 body.reader-mode-active #sidebar .sidebar-links,
 body.reader-mode-active #page-metadata .page-status,
 body.reader-mode-active #page-metadata .page-confidence,
@@ -2701,13 +2702,16 @@ body.reader-mode-active .date-range sub {
     display: none;
 }
 
-/* Preserve the positioning of related elements by hiding visibility, instead of deleting entirely. */
-body.reader-mode-active .markdownBody a .indicator-hook,
-body.reader-mode-active .markdownBody a .link-icon-hook,
-body.reader-mode-active .footnote-ref,
-body.reader-mode-active .footnote-back,
+/*	Preserve the positioning of related elements by hiding visibility, instead 
+	of deleting entirely.
+ */
 body.reader-mode-active .date-range .subsup sub {
     visibility: hidden;
+}
+
+body.reader-mode-active.masked-links-hidden .footnote-ref,
+body.reader-mode-active.masked-links-hidden .footnote-back {
+    opacity: 0;
 }
 
 body.reader-mode-active #sidebar a.logo {
@@ -2718,71 +2722,42 @@ body.reader-mode-active #TOC ul li {
     padding-left: 0.125em;
 }
 
-body.reader-mode-active .markdownBody .spawns-popup,
-body.reader-mode-active .markdownBody .spawns-popin {
-    margin: 0;
-    padding: 0;
-}
-
-body.reader-mode-active .markdownBody a .indicator-hook::before {
-    padding-left: 0.3em;
-    box-shadow:
-        -0.17em  0.05em 0 0 var(--link-underline-background-color),
-        -0.17em -0.05em 0 0 var(--link-underline-background-color),
-        -0.17em  0      0 0 var(--link-underline-background-color);
-    background-image:
-        linear-gradient(var(--link-underline-background-color),
-                        var(--link-underline-background-color)),
-        linear-gradient(var(--link-underline-gradient-line-color),
-                        var(--link-underline-gradient-line-color)),
-        linear-gradient(var(--link-underline-gradient-line-color),
-                        var(--link-underline-gradient-line-color));
-    background-size:
-        1px  0.5em,
-        100% 1px,
-        1px  calc(0.75em - 0.1em);
-    background-position:
-        0 0.1em,
-        0 calc(100% - 0.1em),
-        0 calc(100% - 0.1em);
-}
-
-body.reader-mode-active .markdownBody a .link-icon-hook {
-    position: absolute;
-    box-shadow:
-         0.17em  0.05em 0 0 var(--link-underline-background-color),
-         0.17em -0.05em 0 0 var(--link-underline-background-color),
-         0.17em  0      0 0 var(--link-underline-background-color);
-    background-color: var(--link-underline-background-color);
-    background-image:
-        linear-gradient(var(--link-underline-gradient-line-color),
-                        var(--link-underline-gradient-line-color));
-    background-size:
-        100% 1px;
-    background-position:
-        0 calc(100% - 0.2em);
-    background-repeat: no-repeat;
-}
-
-body.reader-mode-active .markdownBody a.has-annotation .link-icon-hook {
-    background-image: var(--link-underline-background-image);
-    background-size: 2px 1px;
-    background-repeat: repeat-x;
-}
-
-body.reader-mode-active .markdownBody a:hover {
+/*  Links.
+ */
+body.reader-mode-active .markdownBody a.has-indicator-hook,
+body.reader-mode-active .markdownBody a.has-icon {
+	margin: 0;
     position: relative;
     z-index: 111;
 }
 
-body.reader-mode-active .markdownBody a:hover .indicator-hook,
-body.reader-mode-active .markdownBody a:hover .link-icon-hook {
-    visibility: visible;
-}
-
 body.reader-mode-active.masked-links-hidden .markdownBody a .indicator-hook,
 body.reader-mode-active.masked-links-hidden .markdownBody a .link-icon-hook {
-    display: none;
+    visibility: hidden;
+}
+
+body.reader-mode-active .markdownBody a .indicator-hook,
+body.reader-mode-active .markdownBody a .link-icon-hook {
+	box-shadow: inherit;
+	background-image: inherit;
+	background-size: inherit;
+	background-repeat: inherit;
+	background-position: inherit;
+    background-color: var(--link-underline-background-color);
+}
+
+body.reader-mode-active .markdownBody a .indicator-hook {
+	margin-left: -0.3em;
+}
+
+body.reader-mode-active .markdownBody a .link-icon-hook {
+	padding-right: 0.05em;
+}
+body.reader-mode-active .markdownBody a[data-link-icon-type='svg'] .link-icon-hook {
+	margin-right: calc(-1 * (var(--link-icon-size) + var(--link-icon-offset-x) + 0.05em));
+}
+body.reader-mode-active .markdownBody a[data-link-icon-type*='text'] .link-icon-hook {
+	margin-right: calc(-1 * (1.4ch + var(--link-icon-offset-x) + 0.05em));
 }
 
 body.reader-mode-active.masked-links-hidden .markdownBody a:not(.popup-open):not(.popin-open),
