default.html: fix bug in page-specific classes having the wrong name in the <meta> copy

--- a/template/default.html
+++ b/template/default.html
@@ -57,7 +57,7 @@
     <meta name="citation_fulltext_html_url" content="https://gwern.net$url$">
     <meta name="og:url" content="https://gwern.net$url$">
     <link rel="alternate" type="text/markdown" href="https://gwern.net$url$.md" title="Markdown source of ‘$title-plain$’ page">
-    <meta name="page-body-classes" content="$safe-url$ $css-extension$">
+    <meta name="page-body-classes" content="page-$safe-url$ $css-extension$">
     <meta name="citation_fulltext_world_readable" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="light dark">
